content/docs/core/1.4.0/reference/vendr-core-services/README.md
---
title: Vendr.Core.Services
description: API reference for Vendr.Core.Services in Vendr, the eCommerce solution for Umbraco v8+
---
## Vendr.Core.Services namespace

| Public Type | Description |
| --- | --- |
| class [AnalyticsService](analyticsservice/) |  |
| class [CountryService](countryservice/) |  |
| class [CurrencyService](currencyservice/) |  |
| class [DiscountService](discountservice/) |  |
| class [EmailTemplateService](emailtemplateservice/) |  |
| abstract class [EntityServiceBase](entityservicebase/) |  |
| class [GiftCardService](giftcardservice/) |  |
| interface [IAnalyticsService](ianalyticsservice/) |  |
| interface [ICachedEntityService&lt;TEntityType&gt;](icachedentityservice-1/) | Defines a service that supports cached entities |
| interface [ICountryService](icountryservice/) | Defines the Vendr Country service |
| interface [ICurrencyExchangeRateService](icurrencyexchangerateservice/) |  |
| interface [ICurrencyService](icurrencyservice/) | Defines the Vendr Currency service |
| interface [IDiscountService](idiscountservice/) | Defines the Vendr Discount service |
| interface [IEmailTemplateService](iemailtemplateservice/) | Defines the Vendr Email Template service |
| interface [IGiftCardService](igiftcardservice/) |  |
| interface [IOrderFinderService](iorderfinderservice/) |  |
| interface [IOrderService](iorderservice/) | Defines the Vendr Order service |
| interface [IOrderStatusService](iorderstatusservice/) | Defines the Vendr Order Status service |
| interface [IPaymentMethodService](ipaymentmethodservice/) | Defines the Vendr Payment Method service |
| interface [IPriceFreezerService](ipricefreezerservice/) | Defines the Vendr Price Freezer service |
| interface [IProductPriceFreezerService](iproductpricefreezerservice/) | Defines the Vendr Product Price Freezer service |
| interface [IProductService](iproductservice/) | Defines the Vendr Product service |
| interface [IRegisteredCustomerInfoService](iregisteredcustomerinfoservice/) |  |
| interface [IService](iservice/) | Marker interface for services |
| interface [IShippingMethodService](ishippingmethodservice/) | Defines the Vendr Shipping Method service |
| interface [IStoreService](istoreservice/) | Define the Vendr Store service |
| interface [ITaxService](itaxservice/) | Defines the Vendr Tax service |
| interface [ITranslationService](itranslationservice/) | Defines the Vendr Translation service |
| class [OrderFinderService](orderfinderservice/) |  |
| class [OrderService](orderservice/) |  |
| class [OrderStatusService](orderstatusservice/) |  |
| class [PaymentMethodService](paymentmethodservice/) |  |
| class [PriceFreezerService](pricefreezerservice/) |  |
| class [ProductPriceFreezerService](productpricefreezerservice/) |  |
| class [ProductService](productservice/) |  |
| class [RegisteredCustomerInfoService](registeredcustomerinfoservice/) |  |
| abstract class [ServiceBase](servicebase/) |  |
| class [ShippingMethodService](shippingmethodservice/) |  |
| class [StoreService](storeservice/) |  |
| class [TaxService](taxservice/) |  |
| class [UmbracoDictionaryTranslationService](umbracodictionarytranslationservice/) |  |
| class [VendrServiceContext](vendrservicecontext/) | A central service context for easy access to all of Vendr's services |

<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
